// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/progress/demo/circle.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:132px;height:132px;font-size:27.12px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:132px;height:132px;font-size:27.12px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#ff5500"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:132px;height:132px;font-size:27.12px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-dynamic.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:132px;height:132px;font-size:27.12px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-minus"
      />
    </button>
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-plus"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-mini.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18.8px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:88.59291283123217px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18.8px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#ff5500"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18.8px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dashboard.md correctly 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info"
>
  <div
    class="ant-progress-inner"
    style="width:132px;height:132px;font-size:27.12px;"
  >
    <svg
      class="ant-progress-circle "
      viewbox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
           a 47,47 0 1 1 0,-94
           a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#f3f3f3"
        stroke-width="6"
        style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
           a 47,47 0 1 1 0,-94
           a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#108ee9"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
      />
    </svg>
    <span
      class="ant-progress-text"
    >
      75%
    </span>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dynamic.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:0%;height:10px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-minus"
      />
    </button>
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-plus"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/format.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:132px;height:132px;font-size:27.12px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75 Days
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info"
  >
    <div
      class="ant-progress-inner"
      style="width:132px;height:132px;font-size:27.12px;"
    >
      <svg
        class="ant-progress-circle "
        viewbox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
             a 47,47 0 1 1 0,94
             a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        Done
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:30%;height:10px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:10px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:70%;height:10px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:100%;height:10px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:10px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line-mini.md correctly 1`] = `
<div
  style="width:170px;"
>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:30%;height:5px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:5px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:70%;height:5px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:100%;height:5px;"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check-circle"
        />
      </span>
    </div>
  </div>
</div>
`;
